# ub-tester-tool

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: ASTFrontendInjector.h  UBSafeCArray.h  UBSafeCArrayImpl.hpp  UBSafePointer.h  UBSafePointerImpl.hpp  UBTester.h  UBUtility.h
include/arithmetic-overflow/: ArithmeticOverflowAsserts.h  ArithmeticUBAsserts.h  ArithmeticUBCheckers.h  ArithmeticUBUtility.h  BinaryOperatorSubsituter.h  FindArithmeticOverflowConsumer.h  FindArithmeticOverflowVisitor.h  FindArithmeticUBConsumer.h  FindArithmeticUBVisitor.h  TypeConversionCheckers.h
include/arithmetic-ub/: ArithmeticUBAsserts.h  ArithmeticUBCheckers.h  FindArithmeticUBConsumer.h  TypeConversionCheckers.h
include/assert-message-manager/: AssertMessageManager.h
include/cli/: AssertMessageManagerInString.h  CLI.h  CLIOptions.h  ConfigInString.h
include/code-injector/: ASTFrontendInjector.h  ASTFrontendInjectorImpl.hpp  CodeInjector.h  InjectorASTWrapper.h  InjectorASTWrapperImpl.hpp
include/index-out-of-bounds/: CArrayHandler.h  CArraySubstituter.h  FindIOBConsumer.h  IOBAsserts.h  IOBConsumer.h  IOBStringView.h  IndexOutOfBoundsConsumer.h  PointerHandler.h  PointerSubstituter.h  SafeSubstituterConsumer.h
include/index-out-of-bounds/ub-safe-containers/: UBSafeAsserts.h  UBSafeCArray.h  UBSafeCArrayImpl.hpp
include/index-out-of-bounds/ubsafe_containers/: UBSafeCArray.h  UBSafeCArrayImpl.hpp  UBSafePointer.h
include/pointer-ub/: FindPointerUBConsumer.h  FindPointerUBVisitor.h
include/pointers/: FindPointerUBConsumer.h  PointerHandler.h  PointersAsserts.h  PointersAssertsView.h  PointersConsumer.h
include/type-substituter/: SafeTypesNames.h  SafeTypesView.h  TypeSubstituterConsumer.h  TypeSubstituterVisitor.h
include/ub-safe-containers/: CArrayNPointerUBAsserts.h  IOBAsserts.h  PointerUBAsserts.h  PointersAsserts.h  UBSafeCArray.h  UBSafeCArrayImpl.hpp  UBSafePointer.h  UBSafePointerImpl.hpp
include/uninit-variables/: UBSafeType.h  UB_UninitSafeType.h  UB_UninitSafeTypeConsts.h  UninitVarsDetection.h
include/utility/: GetFuncCodeAvailVisitor.h  UtilityConsumer.h
src/: CMakeLists.txt  LoopConvert.cpp  UBUtility.cpp  main.cpp
src/arithmetic-overflow/: BinaryOperatorSubsituter.cpp  CMakeLists.txt  FindArithmeticOverflowConsumer.cpp  FindArithmeticOverflowVisitor.cpp  FindArithmeticUBConsumer.cpp  FindArithmeticUBVisitor.cpp
src/arithmetic-ub/: CMakeLists.txt  FindArithmeticUBConsumer.cpp  FindArithmeticUBVisitor.cpp
src/assert-message-manager/: AssertMessageManager.cpp  CMakeLists.txt
src/code-injector/: ASTFrontendInjector.cpp  CMakeLists.txt  CodeInjector.cpp  InjectorASTWrapper.cpp
src/index-out-of-bounds/: CArrayHandler.cpp  CArraySubstituter.cpp  CArrayVisitor.cpp  CMakeLists.txt  FindIOBConsumer.cpp  IOBConsmer.cpp  IOBConsumer.cpp  IOBStringView.cpp  IndexOutOfBoundsConsumer.cpp  PointerHandler.cpp  PointerSubstituter.cpp  SafeSubstituterConsumer.cpp
src/pointer-ub/: CMakeLists.txt  FindPointerUBConsumer.cpp  FindPointerUBVisitor.cpp
src/pointers/: FindPointerUBConsumer.cpp  FindPointerUBVisitor.cpp  PointerHandler.cpp  PointersConsumer.cpp
src/type-substituter/: CMakeLists.txt  TypeSubstituterConsumer.cpp  TypeSubstituterVisitor.cpp
src/uninit-variables/: CMakeLists.txt  UninitVarsDetection.cpp
src/utility/: CMakeLists.txt  GetFuncCodeAvailVisitor.cpp  UtilityConsumer.cpp
